...
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/expand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Expand options button"
            android:src="@drawable/baseline_menu_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/share_event_button"
            android:layout_marginTop="8dp"
            android:tag="false"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/share_event_button"
            android:layout_width="wrap_content"
...
